--- a/table/table.html
+++ b/table/table.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="">
+    <table border="10px" width="400" >
+        <tr>
+            <th colspan="4">Student Data</th>
+        </tr>
         <tr>
             <th>sno.</th>
             <th>Name</th>
