--- a/First-css/first.html
+++ b/First-css/first.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="style.css">
+
     <style>
         body {
             background-color: lightgrey;
             color: aqua;
-        }
-
-        h1 {
-            background-color: blanchedalmond;
-            color: red;
         }
 
         p {
@@ -30,9 +27,9 @@
 </head>
 
 <body>
-    <h1>Hello, Imran Hussain, This is using Tag selecter</h1>
-    <h1 class="manish">Hello, Manish Bhai, This is using class selecter</h1>
-    <h1>Hello, Imran Hussain</h1>
+    <h1 style="background-color: aquamarine; color: red;">Hello, Imran Hussain, This style using inline</h1>
+    <h1 class="manish">Hello, Manish Bhai, This style using internal CSS</h1>
+    <h1 class="hussain">Hello, Hussain, This style using external CSS</h1>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est et vitae facere corporis. Nam atque ab similique
         consequuntur quam error fugiat dolorum! Voluptas perferendis cupiditate est perspiciatis dignissimos saepe
