--- a/display/index.html
+++ b/display/index.html
@@ -9,14 +9,14 @@ value- start,end,center,space-evenly,space-arround,space-between-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task1</title>
+    <title>Display</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link rel="stylesheet" href="style.css">
 </head>
 
-<body bgcolor="black">
+<body>
     <section class="container">
 <div class="card">
         <i class="fa-solid fa-globe"></i>
