--- a/font-awe/index.html
+++ b/font-awe/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Font awesome</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <link rel="stylesheet" href="style.css">
+
+    <style>
+        i{
+            font-size: 50px;
+            color: blue;
+            letter-spacing: 100px;
+        }
+    </style>
 </head>
 <body>
-    <i class="fa-solid fa-house" style="color: #B197FC;"></i>
+    <i class="fa-solid fa-house"></i>
 
     <i class="fa-brands fa-facebook"></i>
 
