--- a/font-family/index.html
+++ b/font-family/index.html
@@ -31,6 +31,8 @@
         }
         .box{
             background-image: url("https://plus.unsplash.com/premium_photo-1664303218668-03fa4e612038?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyfHx8ZW58MHx8fHx8");
+            background-repeat: no-repeat;
+            background-size: cover;
             width: 100%;
             height: 100vh;
         }
@@ -40,7 +42,7 @@
 <body>
     <div class="box">
         <h1>Hello, Imran</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ullam quos facilis magni, error aut molestias
+        <!-- <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure ullam quos facilis magni, error aut molestias
             quaerat veritatis rem possimus numquam, delectus minima repudiandae, voluptates sit non. Incidunt, ut totam.
             Consequatur impedit, cumque veniam incidunt reiciendis iusto quasi. Ipsa reprehenderit, similique recusandae
             consequatur est eaque officia possimus facere suscipit ipsum quo quasi laboriosam praesentium accusamus
@@ -68,7 +70,7 @@
             Repudiandae, officia velit. Est similique vel error reiciendis perspiciatis beatae earum eligendi fugiat
             necessitatibus accusantium minima esse quas optio architecto, quia voluptatem consectetur dolor omnis,
             voluptas
-            sunt labore. Dolorum, corporis.</p>
+            sunt labore. Dolorum, corporis.</p> -->
     </div>
 </body>
 
